# paperless-field-extractor

./: CHANGELOG.md  Cargo.toml  README.md  openapi.json  workflow_api_sequence.mmd
.github/: FUNDING.yml
.github/workflows/: container.yml  rust.yml
distribution/docker/: Dockerfile
src/: config.rs  extract.rs  main.rs  requests.rs  server.rs  types.rs
