[package]
name = "paperless-field-extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
paperless-api-client = { path = "../paperless-api-client" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
futures = "0.3.31"
log = "0.4.27"
colog = "1.3.0"
