[package]
name = "paperless-field-extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
paperless-api-client = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
futures = "0.3.31"
log = "0.4.27"
colog = "1.3.0"
gbnf = "0.2.5"
llama-cpp-2 = { git = "https://github.com/ju6ge/llama-cpp-rs", branch = "fix/allow-decoding-eos-tokens", default-features = false }
encoding_rs = "0.8.35"
schemars = { version = "1.0.4", features = ["chrono04", "derive"] }
chrono = "0.4.41"
thiserror = "2.0.17"
toml = "0.9.8"

[features]
vulkan = [ "llama-cpp-2/vulkan" ]
native = [ "llama-cpp-2/native" ]

